Adjust html and fix alignment of main
Had to take everything in the main section and put it into ANOTHER
container so that I could properly align the whole section without the
header expanding past the content. Still need to style list links
properly.

--- a/style.css
+++ b/style.css
@@ -84,16 +84,21 @@ body {
 
 .header {
     display: flex;
-    flex: 1;
     flex-direction: row;
-    align-items: flex-start;
-    /*justify-content: space-between;*/
+    justify-content: space-between;
 }
 
 .main {
     display: flex;
-    flex-direction: column;
-    /*justify-content: center;*/
+    justify-content: center;
     align-items: center;
     background-color: #1f2937;
 }
+
+.main-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #1f2937;
+}
+
